--- a/src/modules/SideBar.scss
+++ b/src/modules/SideBar.scss
@@ -1,8 +1,5 @@
 .sidebar-container {
-    /* --wid: 33.73vw; */
-    /* --wid: 30.7vw;
-    width: var(--wid); */
-    flex: 33.3%;
+    flex: calc(100% * (1 / 3));
     /* make this exact */
     height: calc(100vh - 60px);
     background-color: #fff;
